# dashbord_Anfisa

./: README.md  admin_interface.py  api_endpoints.py  app.py  arduino_config.h  auth_routes.py  cookies.txt  cookies_rd.txt  email_reports.py  init_data.py  main.py  pyproject.toml
attached_assets/: Pasted--Arduino-3-2--1749471900073_1749471900074.txt
dash_components/: __init__.py  admin_tab.py  dashboard_tab.py
database/: models.py
static/: dark_theme_fix.css
utils/: __init__.py  auth.py
